--- a/README.Rmd
+++ b/README.Rmd
@@ -17,21 +17,21 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-Everyday ggplot2 extension is a resource for people that want to get into ggplot2 extension but might not be confident of how to do so ('absolute newcomers').
+'everyday ggplot2 extension' is a resource for people that want to get into ggplot2 extension but might not be confident of how to do so ('absolute newcomers').  It introduces some new points of entry including in education materials (recipes) and networking spaces.
 
-'Everyday' is meant in the sense of *ordinary* -- you don't need to create a flashy ggplot2 extension for it to 'count'. You don't need to have lots of people using the extension. You don't need the extension to be on CRAN or write a package for the extension. You don't even need a hex sticker! It is nice if the extension does some work for you or just makes you happy. 
+'Everyday' is meant in the sense of *ordinary* -- you don't need to create a flashy ggplot2 extension for it to 'count'. You don't need to have lots of people using the extension. You don't need the extension to be on CRAN or write a package for the extension. You don't even need a hex sticker! It is nice if the extension does some work for you or just makes you happy. Package development know-how can be complementary to ggplot2 extension, but are NOT a prerequisite and lack of that knowledge shouldn't hold back the extension curious!
 
 'Everyday' is also meant in the sense of *frequent* -- practicing ggplot2 extension will probably make you better at extension - you'll be in a position to write that next handy extension once when you have more experience under your belt.
 
 And, yes our title evokes, 'The Design of Everyday Things'. We do want to thoughtfully design new avenues for bringing people into ggplot2 extension.  
 
-And we also recognize that we might make 'Norman' (poorly designed) ggplot2 extension along the way.  
+And we also recognize that we might make 'Norman' (poorly designed) ggplot2 extension along the way since mistakes can sometimes be more instructive and memorable than doing things 'the right way' the first time round.
 
 ```{r}
 knitr::include_graphics("design_of_everyday_things.jpg")
 ```
 
-Mistakes are instructive and memorable; it's hard to imagine Norman's book selling as well without the ill-conceived tea kettle gracing the cover. Expecting mistakes is another reason to make ggplot2 extension a less out-of-the-ordinary experience; past extensions feel less precious and we can part ways with them if appropriate. 
+It's hard to imagine Norman's book selling as well without the ill-conceived tea kettle gracing the cover. Expecting mistakes is another reason to make ggplot2 extension a less out-of-the-ordinary experience; past extensions feel less precious and we can part ways with them if appropriate. Curious to know if folks agree!
 
 ```{r}
 library(ggstamp)
@@ -51,27 +51,27 @@ ggcanvas() +
 ```
 
 
-# Opportunities for extension?
+# How do I know there's an opportunities for extension?
 
 The reason ggplot2 exists is explained by Hadley Wickham in an interview:
 
 > And, you know, I'd get a dataset. And, *in my head I could very clearly kind of picture*, I want to put this on the x-axis. Let's put this on the y-axis, draw a line, put some points here, break it up by this variable.  And then, like, getting that vision out of my head, and into reality, it's just really, really hard. Just, like, felt harder than it should be. Like, there's a lot of custom programming involved, where I just felt, like, to me, I just wanted to say, like, you know, *this is what I'm thinking, this is how I'm picturing this plot. Like you're the computer 'Go and do it'.*  ... and I'd also been reading about the Grammar of Graphics by Leland Wilkinson, I got to meet him a couple of times and ... I was, like, this book has been, like, written for me.
  - https://www.trifacta.com/podcast/tidy-data-with-hadley-wickham/
 
-To paraphrase, fact that ggplot2 is built on the grammar of graphics, with its logically decomposed bits, lets you fly through plot creation with the greatest of ease.  You can go from the plot you've already pictured in your head into reality by describing it.
+To paraphrase, fact that ggplot2 is built on the grammar of graphics, with its 'logically decomposed bits', should let you fly through plot creation with ease.  You can go from the plot you've already pictured in your head into reality  by describing it.
 
 After a good amount of time using ggplot2, you get used to this flying sensation.  You've practiced and mastered the grammar.  You are a composer of graphical poems. You confidently speak plots into existence. Poetry slam!
 
-Until you find yourself with a loss for graphical words within ggplot2. At some point ggplot2 will *seem* to fail to give you the fluid ggplot2 experience.  One day you will find yourself saying, 'Why aren't I flying?"  This might be a moment to check your grammar prowess; or it might be a moment to turn to ggplot2 extension(s)!  
+But then one day you may find yourself with a loss for graphical words within ggplot2. At some point ggplot2 will *seem* to fail to give you the fluid ggplot2 experience.  One day you will find yourself saying, 'Why aren't I flying?"  This might be a moment to check your grammar prowess; or it might be a moment to turn to ggplot2 extension(s)!  
 
-If after browsing extension others have provided, the [extensions gallery](https://exts.ggplot2.tidyverse.org/gallery/)
-and the [Awesome `ggplot2`](https://github.com/erikgahner/awesome-ggplot2) repository, you can't find what you need to fly again, you can consider doing your own extension.
+If, after browsing existing extensions, the [extensions gallery](https://exts.ggplot2.tidyverse.org/gallery/)
+and the [Awesome `ggplot2`](https://github.com/erikgahner/awesome-ggplot2) repository, you can't find what you need to fly again, you can consider creating your own extension.
 
 ```{r, fig.cap="The 'daring young man on the flying trapeze', Jules Leotard."}
 knitr::include_graphics("jules_leotard.jpeg", )
 ```
 
-Heuristics for recognizing ggplot2 extension opportunities:
+To summarize, here are some situations that indicate there might be a ggplot2 extension opportunity:
 
 - I don't feel like I'm flying; but usually I do
 - My brain hurts because of the plot I'm trying to build; but usually it's happy or 
@@ -104,7 +104,7 @@ stamp_female_brain <- function(...){
 
 
 
-# Taste and succeed: a recipes approach
+# Taste, succeed, and minimally modify: a recipes approach
 
 layer extension recipes take the form:
 
@@ -124,13 +124,25 @@ compute_group recipes and tutorial
 - ggextend: browseable, minimal working examples
 
 
-# communities of practice
+# Communities of practice
 
-Communities of practice can help motivate and sustain productivity of projects.  
+Communities of practice can help motivate and sustain productivity of projects.  While  
 
 - stalwarts; long-time ggplot2 extenders and developers
+
+'everyday ggplot2 extension' would like to point you to new communities of practice -- places were you can share work and frustrations in the ggplot2 world:
+
 - warming up; [https://github.com/teunbrand/ggplot-extension-club]
-- absolute newcomers; ggplot2 super-users, no extension experience [tutorial evaluation is underway and focus group may seed absolute newcomers group]
+
+I'm hopeful that an 'absolute newcomers' group may develop; this could consist of ggplot2 super-users, no extension experience [tutorial evaluation is underway and focus group may seed absolute newcomers group](https://github.com/EvaMaeRey/easy-geom-recipes) and their collaborators.  It might spin off of the focus groups for the 'easy geom recipes' evaluation.
+
+- [ggpuzzles](https://github.com/EvaMaeRey/ggpuzzles) is a place to demo minimal not-yet-working examples.  Extenders can share their good ideas which maybe they don't have quite the skills or knowledge to execute on; or maybe they are just missing a comma!
+
+- [ggamericas] is an experiment in the geomSf-inheritance space, seeking to foster cross-package synergies and lessons learned. The following function collections in the works or proposed as early guides in this space:
+
+  - [ggfips](https://github.com/EvaMaeRey/ggfips)
+  - [ggbrazil](https://github.com/EvaMaeRey/ggbrazil)
+  - [ggnorthcarolina]()
 
 'everyday ggplot2 extension' promotes the 'warming up' group and aspires to serve an 'absolute newcomers' group; and to promote cross pollination between groups. 
 
